[package]
name = "nwws-oi"
version = "0.2.0"
authors = ["Will Glynn <will@willglynn.com>"]
edition = "2021"
rust-version = "1.56"
description = "A client for the NOAA Weather Wire Service Open Interface"
repository = "https://github.com/willglynn/nwws-oi"
license = "MIT OR Apache-2.0"
keywords = ["weather", "noaa", "nwws"]
categories = ["api-bindings", "science"]

[dependencies]
thiserror = "1.0"
tokio-xmpp = "3.2"
xmpp-parsers = "0.19"
jid = "0.9"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"
tokio = { version = "1.17", features = ["sync", "time", "rt"] }

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.17", features = ["full"] }
